--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.walter</groupId>
-	<artifactId>kafka-test</artifactId>
+	<artifactId>rabbitmq-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>kafka-test</name>
+	<name>rabbitmq-test</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
